--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Poppins", serif;
 }
 
 body {
@@ -29,8 +32,10 @@ body {
 
 .card {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px;
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -38,7 +43,67 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+.image-lote {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    gap: 8px;
+    width: 100%;
+    height: fit-content;
+    padding: 10px;
+}
+
+.title, .localidade, .vl_avaliacao, .vl_lanceminimo, .vl_lance, .label-usuario {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+
+.localidade {
+    gap: 15px !important;
+}
+
+.label-usuario {
+    gap: 12px !important;
+}
+
+.avaliacao, .lance-minimo, .lance-usuario, .usuario {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.localidade, .avaliacao, .lance-minimo, .lance-usuario, .usuario {
+    font-size: 0.8em;
+}
+
+button {
+    background-color: var(--oxford-blue);
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    color: var(--white);
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: var(--oxford-blue);
+    opacity: 0.8;
+}
+
 :root {
+    --white: #fff;
     --charcoal-gray: #121212;
     --dark-slate-gray: #191919;
     --outer-space: #252525;
